# NotificationTelegramBot

./: .gitignore  Makefile  README.md  pyproject.toml
bot/: background.py  bot.py
bot/core/handlers/: add_notifications.py  set_timezone.py  show_notifications.py  start_bot.py  stop_notifications.py
bot/core/keyboards/: main_keyboard.py  timezone_keyboard.py
bot/core/tools/: constants.py  database.py
t_bot/: bot.py
t_bot/core/handlers/: add_notifications.py  set_timezone.py  show_notifications.py  start_bot.py  stop_notifications.py
t_bot/core/keyboards/: main_keyboard.py
t_bot/core/tools/: hash.py
